--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             top:0; left:0;
             width: 100%; 
             z-index:99; }
+	body {
+		padding: 0px 10px; }
     </style>
     <script>
         $(window).scroll(function(){
