--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Stylish Font Generator</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -992,6 +992,9 @@ function backward(text) { return $('#english-text').val(); }                //]]
                 //console.log(e);
             });
     </script>
+<!-- Scroll to Top Button -->
+<button id="scrollToTopBtn">Top</button>
+<script src="script.js"></script>
 </body>
 
 </html>
