--- a/index.html
+++ b/index.html
@@ -16,6 +16,137 @@
           else sticky.removeClass('fixed');
         });
     </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@graph": [{
+      "@type": "SoftwareApplication",
+      "name": "Stylish Font Generator: Transform Your Text Into Eye-Catching Fonts",
+      "description": "Stylish Font Generator is a tool that transforms plain text into stunning fonts with cool symbols, icons, and emojis. Enhance your social media profiles, gaming usernames, or any online platform with unique fonts.",
+      "operatingSystem": "Browser",
+      "applicationCategory": "Utility",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingCount": "25",
+        "bestRating": "5",
+        "ratingValue": "4.7",
+        "worstRating": "1"
+      },
+      "@id": "https://stylishfontgenerator.info/#schema-82",
+      "isPartOf": {
+        "@id": "https://stylishfontgenerator.info/#webpage"
+      },
+      "publisher": {
+        "@id": "https://stylishfontgenerator.info/#person"
+      },
+      "inLanguage": "en",
+      "mainEntityOfPage": {
+        "@id": "https://stylishfontgenerator.info/#webpage"
+      }
+    },
+    {
+      "@type": "WebSite",
+      "@id": "https://stylishfontgenerator.info/#website",
+      "url": "https://stylishfontgenerator.info/",
+      "name": "Stylish Font Generator",
+      "description": "Transform plain text into stunning fonts with cool symbols, icons, and emojis using our Stylish Font Generator tool.",
+      "publisher": {
+        "@id": "https://stylishfontgenerator.info/#person"
+      },
+      "inLanguage": "en",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://stylishfontgenerator.info/?s={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    },
+    {
+      "@type": "Organization",
+      "@id": "https://stylishfontgenerator.info/#person",
+      "name": "Stylish Font Generator",
+      "alternateName": "Stylish Font Generator Tool",
+      "description": "Stylish Font Generator is a tool that transforms plain text into stunning fonts with cool symbols, icons, and emojis.",
+      "url": "https://stylishfontgenerator.info/",
+      "sameAs": [
+        "https://www.facebook.com/stylishfontgeneratorinfo",
+        "https://twitter.com/stylishfontgeneratorinfo",
+        "https://www.instagram.com/stylishfontgeneratorinfo/",
+        "https://www.linkedin.com/company/stylishfontgeneratorinfo"
+      ]
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://stylishfontgenerator.info/#webpage",
+      "url": "https://stylishfontgenerator.info/",
+      "name": "Stylish Font Generator: Transform Your Text Into Eye-Catching Fonts",
+      "description": "Stylish Font Generator is a tool that transforms plain text into stunning fonts with cool symbols, icons, and emojis. Enhance your social media profiles, gaming usernames, or any online platform with unique fonts.",
+      "datePublished": "2024-07-16",
+      "dateModified": "2024-07-16",
+      "about": {
+        "@id": "https://stylishfontgenerator.info/#person"
+      },
+      "isPartOf": {
+        "@id": "https://stylishfontgenerator.info/#website"
+      },
+      "inLanguage": "en"
+    }
+  ]
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "How can I use the Stylish Font Generator?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Using our Stylish Font Generator is easy! Simply enter your text in the input box, choose from over 90+ stylish font styles, and click 'Copy' to use the stylish text wherever you want."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What types of fonts are available in the Stylish Font Generator?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Our Stylish Font Generator offers a wide range of font styles including Gothic, Old English, Cursive, Script, Bold & Italic, and Tiny Fonts, among others."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Where can I use the stylish fonts created by the Stylish Font Generator?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "You can use the stylish fonts on social media profiles, gaming usernames, art projects, messaging apps, and even in business communications to enhance your online presence."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is the Stylish Font Generator free to use?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, our Stylish Font Generator tool is completely free to use. There are no restrictions or limitations."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I customize the stylish fonts with symbols and emojis?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, you can enhance your stylish fonts with cool symbols, icons, and emojis available in our tool to make your text stand out."
+      }
+    }
+  ]
+}
+</script>
+
 </head>
 <body>	
     <header>
