--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Stylish Font Generator</title>
+    <title>Disclaimer - Stylish Font Generator</title>
     <meta name="description" content="Stylish Font Generator is a tool that transforms plain text into stunning fonts with cool symbols, icons, and emojis. Enhance your social media profiles, gaming usernames, or any online platform with unique fonts.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi5NNsbsXSZOW8YxQQFQPuOWoFjwwwvxjI0Q5owO0gyZZY44r2978x1BVTeyGz1MmxPsKmS9hMKppqj__An5hTW_ZFwVIRQwoNDtPIlwrjSl5CGADjZ_O1goT2ZDG1gDWKxMExMIq7mPHdDhwpQOI7ErfgJ94jcoSd_n-Ghg-82DFlsaRW_Q05RdsnRolE/s1600/favicon.png">
