--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Stylish Font Generator</title>
+    <title>Stylish Font Generator | Cool, Fancy & Stylish Font Maker</title>
     <meta name="description" content="Stylish Font Generator is a tool that transforms plain text into stunning fonts with cool symbols, icons, and emojis. Enhance your social media profiles, gaming usernames, or any online platform with unique fonts.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi5NNsbsXSZOW8YxQQFQPuOWoFjwwwvxjI0Q5owO0gyZZY44r2978x1BVTeyGz1MmxPsKmS9hMKppqj__An5hTW_ZFwVIRQwoNDtPIlwrjSl5CGADjZ_O1goT2ZDG1gDWKxMExMIq7mPHdDhwpQOI7ErfgJ94jcoSd_n-Ghg-82DFlsaRW_Q05RdsnRolE/s1600/favicon.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
